new theme, headers.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 theme: minima
 title: Dr. Cogan Shimizu
 show_downloads: false
+minima:
+  skin: solarized-light
+  header_pages:
+  - index.md
+  - links.md
+  - publications.md
+  - activities.md
+  - funding.md
